# RocketRust

./: .env  Cargo.toml  DBdiesel.sqlite  README.md  data.db  data.sqlite  db_query.txt  diesel.sqlite  sqlite.db  sqlite3.lib
hmtl/: Layout.html  account.html  chart.html  home.html  index.html  login.html  register.html  wallet.html  wallet_dashboard.html  wallet_transactions.html
migrations/2020-03-15-112440_user/: up.sql
migrations/2020-03-29-211057_crate_db/: down.sql  up.sql
migrations/2020-04-01-170120_crate_users/: up.sql
migrations/2020-05-04-181014_crate_transactions/: up.sql
migrations/2020-05-04-182438_crate_transactions/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs  templates.rs
src/templates/: account.rs  index.rs  login.rs  logout.rs  register.rs  wallet.rs
static/: main.css  main.js
templates/: Layout.html.tera  account.html.tera  chart.html.tera  db  index.html.tera  login.html  login.html.tera  register.html.tera  wallet.html.tera  wallet_dashboard.html.tera  wallet_transactions.html.tera
