[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["largon21 <34896467+largon21@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.4.3", features = ["sqlite"] }
dotenv = "0.14.1"

[dependencies.rocket_contrib]
version = "0.4.3"
default-features = false
features = ["handlebars_templates", "tera_templates", "serve"]